--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "manifest_version": 2,
   "name": "The Wiseau Wise Guy",
+  "description": "Brings the beef",
   "version": "0.1",
 
   "icons": {
@@ -9,8 +10,23 @@
       "128": "Wiseau128.png"
   },
 
-  "browser_action": {
+    "permissions": [
+        "activeTab"
+    ],
+    
+    "browser_action": {
       "default_icon": "Wiseau128.png",
       "default_popup": "popup.html"
+    },
+        
+    "content_scripts": 
+    [
+        {
+            "matches":["http://website*"],
+            "js":["thirdParty/jquery3.2.0.min.js", "script.js"],
+            "run_at": "document_end"
+        }
+    ]
   }
 }
+
