--- a/manifest.json
+++ b/manifest.json
@@ -11,15 +11,16 @@
   },
 
     "permissions": [
-        "activeTab"
+        "activeTab",
+        "storage"
     ],
-    
+
     "browser_action": {
       "default_icon": "Wiseau128.png",
       "default_popup": "popup.html"
     },
-        
-    "content_scripts": 
+
+    "content_scripts":
     [
         {
             "matches":["https://*.slack.com/*"],
@@ -28,5 +29,3 @@
         }
     ]
   }
-
-
